Add resume download button

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 <header>
   <h1>R. Sumukh Aryan</h1>
   <p class="tagline">Embedded Systems & IoT Engineer</p>
+   <a class="resume-btn" href="R_SUMUKH_ARYAN_resume.pdf" download>
+    Download Resume
+  </a>
 </header>
 
 <section>
